--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ https://www.tooplate.com/view/2115-marvel
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <a href="D:\L4S1\E-B\LAB\2115_marvel\projects\AutomatedPayroll.rar">
+                            <a href="projects/AutomatedPayroll.rar">
                               <img src="images/project/pay3.png" class="img-fluid" alt="project image">
                             </a>
                           </div>
@@ -124,7 +124,7 @@ https://www.tooplate.com/view/2115-marvel
 
                         <div class="item">
                           <div class="project-info">
-                            <a href="D:\L4S1\E-B\LAB\2115_marvel\projects\finalWebProject\index.html">
+                            <a href="projects/finalWebProject/index.html">
                               <img src="images/project/site4.png" class="img-fluid" alt="project image">
                             </a>
                           </div>
@@ -132,7 +132,7 @@ https://www.tooplate.com/view/2115-marvel
 
                         <div class="item">
                           <div class="project-info">
-                            <a href="D:\L4S1\E-B\LAB\2115_marvel\projects\EcomDB.JPG">
+                            <a href="projects/EcomDB.JPG">
                               <img src="images/project/db2.png" class="img-fluid" alt="project image" >
                             </a>
                           </div>
@@ -140,7 +140,7 @@ https://www.tooplate.com/view/2115-marvel
 
                         <div class="item">
                           <div class="project-info">
-                            <a href="D:\L4S1\E-B\LAB\2115_marvel\projects\AIProject.pdf">
+                            <a href="projects/AIProject.pdf">
                               <img src="images/project/vr.png" class="img-fluid" alt="project image">
                             </a>
                           </div>
