--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Great software solutions with the best skills.I am a pasionate Software Engineer who is ready to change the world!">
+    <meta name="author" content="Manal">
+    <meta name="keywords" content="manal,SWE,software,engineering,engineer,projects,backend,developer">
 
     <title>Manal Alsaeedi</title>
 
@@ -117,32 +118,47 @@ https://www.tooplate.com/view/2115-marvel
                         <div class="item">
                           <div class="project-info">
                             <a href="projects/AutomatedPayroll.rar">
-                              <img src="images/project/pay3.png" class="img-fluid" alt="project image">
+                              <img src="images/project/pay3.png" class="img-fluid" alt="Software Analysis" loading="lazy">
                             </a>
+                            <p>
+                              Automated Payroll using GPS tracking and image capturing analysis.
+                              <br>
+                              Got the idea from 
+                              <a href="https://nevonprojects.com/automated-payroll-with-gps-tracking-and-image-capture/">nevonprojects.com</a>
+                            </p>
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
                             <a href="projects/finalWebProject/index.html">
-                              <img src="images/project/site4.png" class="img-fluid" alt="project image">
+                              <img src="images/project/site4.png" class="img-fluid" alt="Web Design" loading="lazy">
                             </a>
+                            <p>
+                              A travelling agency website design with html and css only.
+                            </p>
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
                             <a href="projects/EcomDB.JPG">
-                              <img src="images/project/db2.png" class="img-fluid" alt="project image" >
+                              <img src="images/project/db2.png" class="img-fluid" alt="E-commerce DB" loading="lazy">
                             </a>
+                            <p>
+                              E-commerce system database.
+                            </p>
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
                             <a href="projects/AIProject.pdf">
-                              <img src="images/project/vr.png" class="img-fluid" alt="project image">
+                              <img src="images/project/vr.png" class="img-fluid" alt="Virtual Reality" loading="lazy">
                             </a>
+                            <p>
+                              Virtual Reality simple report.
+                            </p>
                           </div>
                         </div>
 
@@ -230,7 +246,7 @@ https://www.tooplate.com/view/2115-marvel
                             </div>
                             <div class="timeline-info">
                                 <h3><span>Computer Science</span><small>BA</small></h3>
-                                <p>I stared my college journey in 2019 at The University of Science and Technology.</p>
+                                <p>I stared my college journey in 2019 at <a href="https://ust.edu.ye">The University of Science and Technology</a>.</p>
                             </div>
                         </div>
                         
